--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
     "name": "splash-screen-ext",
-    "version": "0.1.0",
+    "version": "1.0.1",
     "description": "A JupyterLab extension.",
     "keywords": [
         "jupyter",
         "jupyterlab",
         "jupyterlab-extension"
     ],
-    "homepage": "",
+    "homepage": "https://github.com/MrCrashLab/splash_screen_ext",
     "bugs": {
-        "url": "/issues"
+        "url": "https://github.com/MrCrashLab/splash_screen_ext/issues"
     },
     "license": "BSD-3-Clause",
     "author": "buenajen",
@@ -24,7 +24,7 @@
     "style": "style/index.css",
     "repository": {
         "type": "git",
-        "url": ".git"
+        "url": "https://github.com/MrCrashLab/splash_screen_ext.git"
     },
     "scripts": {
         "build": "jlpm build:lib && jlpm build:labextension:dev",
